# monad-portal

./: .ghci  .gitattributes  .gitignore  CHANGELOG.md  Person.table  README.md  build-test.sh  cabal-ghcjs.project  cabal.project  default.nix  dev-shell.sh  package.nix  run-file.sh  run-server.sh  telescope.cabal  test.sh
.github/workflows/: test.yml
app/: Main.hs
apps/chatroom-backend/: CHANGELOG.md  chatroom-backend.cabal
apps/chatroom-backend/app/: Main.hs
apps/chatroom-common/: CHANGELOG.md  chatroom-common.cabal
apps/chatroom-common/src/ChatRoom/: Common.hs
apps/chatroom-frontend/: CHANGELOG.md  chatroom-frontend.cabal
apps/chatroom-frontend/app/: Main.hs
apps/demo-backend/app/: Main.hs
apps/demo-common/: demo-common.cabal
apps/demo-common/src/Demo/: Common.hs
apps/demo-frontend/app/: Main.hs
apps/testing-backend/: CHANGELOG.md  testing-backend.cabal
apps/testing-backend/app/: Main.hs
apps/testing-common/: CHANGELOG.md  testing-common.cabal
apps/testing-common/src/Testing/: Common.hs
apps/testing-frontend/: CHANGELOG.md  testing-frontend.cabal
apps/testing-frontend/app/: Main.hs
apps/todolist-backend/: CHANGELOG.md  todolist-backend.cabal
apps/todolist-backend/app/: Main.hs
apps/todolist-common/: CHANGELOG.md  todolist-common.cabal  todolist.cabal
apps/todolist-common/src/ToDoList/: Common.hs
apps/todolist-frontend/: CHANGELOG.md  todolist-frontend.cabal
apps/todolist-frontend/app/: Main.hs
demo-backend/: CHANGELOG.md  demo-backend.cabal
demo-backend/app/: Main.hs
demo-common/: CHANGELOG.md  demo-common.cabal
demo-common/src/: Common.hs
demo-frontend/: demo-frontend.cabal
demo-frontend/app/: Main.hs
demos/demo-backend/app/: Main.hs
demos/demo-common/: LICENSE
demos/demo-common/src/Demo/: Common.hs
demos/demo-frontend/: CHANGELOG.md
demos/demo-frontend/app/: Main.hs
diagram/: diagram.drawio
docs/: ABOUT.md  DEVELOPMENT.md  FAQ.md  TUTORIAL.md
docs/design/: server-handlers.org
homepage/: CHANGELOG.md
homepage-build/: index.html  out.frefs.js  out.frefs.json  out.stats
homepage-frontend/: CHANGELOG.md  homepage-frontend.cabal  homepage.css
homepage-frontend/app/: Main.hs
homepage/homepage/: LICENSE  homepage.cabal
homepage/homepage-frontend/: homepage.css
homepage/homepage-frontend/app/: Main.hs
homepage/homepage/app/: Main.hs
monad-portal/: LICENSE  monad-portal.cabal
monad-portal/dev/: Main.hs
monad-portal/src/Data/: Portal.hs
monad-portal/src/Data/Portal/: Class.hs  Exception.hs  Operations.hs
monad-portal/src/Data/Portal/Storable/: From.hs  To.hs  Types.hs
monad-portal/src/Data/Portal/Table/: Class.hs  From.hs  To.hs  Types.hs
monad-portal/test/: Test.hs
scripts/: build-backend.sh  build-frontend.sh  build-telescope.sh  build.sh  check-no-nix.sh  check.sh  ci-test.sh  functions.sh  ghcid.sh  hoogle.sh  repl.sh  run-frontend.sh  run-server.sh  run.sh  static.sh  test-telescope.sh  test.sh  upload-cache.sh  util.sh  workaround.sh
scripts/cachix/: push.sh  use.sh
scripts/run/: dev.sh  prod.sh
scripts/run/dev/: backend.sh  frontend.sh
scripts/run/prod/: backend.sh
scripts/test/: ci.sh  full.sh
src/Telescope/: Class.hs  Ops.hs  Store.hs  TFile.hs  Table.hs
telescope/: default.nix  package.nix  telescope.cabal
telescope-ds-file/: .ghci  CHANGELOG.md  ghcid.sh  package.nix  telescope-ds-file.cabal
telescope-ds-file/app/: Main.hs
telescope-ds-file/src/Telescope/DS/: File.hs
telescope-ds-file/test/: Test.hs
telescope-ds-reflex-dom/: CHANGELOG.md  telescope-ds-reflex-dom.cabal
telescope-ds-reflex-dom/src/Telescope/DS/Reflex/: Dom.hs
telescope-ds-test/: CHANGELOG.md  telescope-ds-test.cabal
telescope-ds-test/src/Telescope/DS/: Test.hs
telescope-server/: CHANGELOG.md  default.nix  package.nix  telescope-server.cabal
telescope-server-api/: CHANGELOG.md  telescope-server-api.cabal
telescope-server-api-types/: CHANGELOG.md  telescope-server-api-types.cabal
telescope-server-api-types/src/Telescope/Server/API/: Types.hs
telescope-server-api/src/Telescope/Server/: API.hs
telescope-server/app/: Main.hs
telescope-server/src/Telescope/: Server.hs
telescope/dev/: Main.hs
telescope/src/: Telescope.hs
telescope/src/Telescope/: Class.hs  Convert.hs  Exception.hs  Operations.hs  Ops.hs  Store.hs  Table.hs
telescope/src/Telescope/Storable/: From.hs  To.hs  Types.hs
telescope/src/Telescope/Table/: From.hs  To.hs  Types.hs
telescope/test/: Test.hs
test/: MyLibTest.hs  Test.hs
