cabal-version:       2.4
name:                demo-backend
version:             0.1.0.0
synopsis:            Backend code for Telescope framework demo application.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

executable demo-backend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, demo-common, telescope, telescope-ds-file, telescope-server
  hs-source-dirs:      app
  default-language:    Haskell2010
