cabal-version:       2.4
name:                homepage-frontend
version:             0.1.0.0
synopsis:            Homepage frontend for the Haskell Telescope framework.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              jerbaroo
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

executable homepage-frontend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, containers, file-embed, reflex-dom, text
  hs-source-dirs:      app
  default-language:    Haskell2010
