cabal-version:       2.4
name:                telescope-ds-file
version:             0.1.0.0
synopsis:            File-based data source for the Haskell Telescope framework.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     Telescope.DS.File
  -- other-modules:
  -- other-extensions:
  build-depends:       base, bytestring, cereal, containers, directory, extra, filepath, fsnotify, strict, telescope
  hs-source-dirs:      src
  default-language:    Haskell2010


executable telescope-ds-file
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, telescope, telescope-ds-file
  hs-source-dirs:      app
  default-language:    Haskell2010


test-suite telescope-ds-file-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base, telescope, telescope-ds-file, HUnit
