cabal-version:       2.4
name:                telescope-ds-reflex-dom
version:             0.1.0.0
synopsis:            Telescope instance for a Reflex Dom application.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              jerbaroo
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Telescope.DS.Reflex.Dom
  -- other-modules:
  -- other-extensions:
  build-depends:       base, containers, lens, reflex-dom, telescope, telescope-server-api, text
  hs-source-dirs:      src
  default-language:    Haskell2010
