cabal-version:       2.4
name:                telescope-ds-test
version:             0.1.0.0
synopsis:            A Test-suite for instance of the Telescope interface.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              jerbaroo
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Telescope.DS.Test
  -- other-modules:
  -- other-extensions:
  build-depends:       HUnit, base, telescope, text
  hs-source-dirs:      src
  default-language:    Haskell2010
