cabal-version:       2.4
name:                telescope-server-api
version:             0.1.0.0
synopsis:            API definition for the Telescope framework's server.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     Telescope.Server.API
  -- other-modules:
  -- other-extensions:
  build-depends:       base, containers, servant, servant-websockets, telescope
  hs-source-dirs:      src
  default-language:    Haskell2010
