cabal-version:       2.4
name:                telescope-server
version:             0.1.0.0
synopsis:            A Servant server for the Haskell Telescope framework.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     Telescope.Server
  -- other-modules:
  -- other-extensions:
  build-depends:       base, bytestring, containers, servant-server, telescope, telescope-ds-file, telescope-server-api, warp, websockets
  hs-source-dirs:      src
  default-language:    Haskell2010
