cabal-version:       2.4
name:                telescope
version:             0.1.0.0
synopsis:            Build reactive web apps with Haskell, fast!
-- description:
homepage:            https://github.com/barischrooneyj/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          barischrooneyj@protonmail.com
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Telescope.Class,
                       Telescope.Exception,
                       Telescope.Operations,
                       Telescope.Storable.From,
                       Telescope.Storable.To,
                       Telescope.Storable.Types,
                       Telescope.Table.From,
                       Telescope.Table.To,
                       Telescope.Table.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson, base, bytestring, cereal, cereal-text, comonad,
                       containers, extra, generics-eot, strict, text
  hs-source-dirs:      src
  default-language:    Haskell2010
