cabal-version:       2.4
name:                telescope
version:             0.1.0.0
synopsis:            Rapidly develop reactive web apps with Haskell.
-- description:
homepage:            https://github.com/barischrooneyj/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Telescope,
                       Telescope.Class,
                       Telescope.Convert,
                       Telescope.Exception,
                       Telescope.Operations,
                       Telescope.Storable.From,
                       Telescope.Storable.To,
                       Telescope.Storable.Types,
                       Telescope.Table.From,
                       Telescope.Table.To,
                       Telescope.Table.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson
                     , base
                     , comonad
                     , containers
                     , control-bool
                     , extra
                     , flat
                     , generics-eot
                     , text
                     , witherable
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dev
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , pretty-simple
                     , telescope
                     , text
  hs-source-dirs:      dev
  default-language:    Haskell2010

test-suite telescope-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       HUnit, base, containers, telescope, text
