cabal-version:       2.4
name:                todolist-common
version:             0.1.0.0
synopsis:            Common code for Telescope framework to-do list application.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     ToDoList.Common
  -- other-modules:
  -- other-extensions:
  build-depends:       base, telescope, text
  hs-source-dirs:      src
  default-language:    Haskell2010
