cabal-version:       2.4
name:                todolist-frontend
version:             0.1.0.0
synopsis:            Frontend code for Telescope framework to-do list application.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Barisch-Rooney
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

executable todolist-frontend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, containers, control-bool, generic-lens, lens,
                       reflex-dom, telescope, telescope-ds-reflex-dom, text,
                       todolist-common
                       , jsaddle-warp, random, extra, composition-extra
  hs-source-dirs:      app
  default-language:    Haskell2010
