cabal-version:       2.4
name:                homepage
version:             0.1.0.0
synopsis:            Preprocessing for the Haskell Telescope framework homepage.
-- description:
homepage:            https://github.com/jerbaroo/telescope
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              jerbaroo
maintainer:          jerbaroo.work@pm.me
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

executable homepage
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, blaze-html, cheapskate, containers, either, extra,
                       filepath, file-embed, mtl, skylighting, text
  hs-source-dirs:      app
  default-language:    Haskell2010
